src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>GWBase__Gift</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Won%2C Not Thanked</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GWBase__Grant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>LOI Submitted</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Major Gift Moves Management</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Cultivating</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Won%2C Not Thanked</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Amount_Requested__c</fullName>
        <label>Amount Requested</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GWBase__CR_Contact_Id__c</fullName>
        <inlineHelpText>Field used by code that creates new opportunities</inlineHelpText>
        <label>CR Contact Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__CR_Contact_Role__c</fullName>
        <inlineHelpText>Field used by code that creates new opportunities</inlineHelpText>
        <label>CR Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__CR_HHroles__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Field used by code that creates new opportunities</inlineHelpText>
        <label>CR HHRoles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GWBase__Check_Date__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__Check_Number__c</fullName>
        <label>Check Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__CombinedRollupFieldset__c</fullName>
        <description>Concatenated fields used during rollups to locate the most recent opportunity.</description>
        <formula>TEXT(CloseDate) + &apos;;|;&apos;+ TEXT(Amount) + &apos;;|;&apos;+ TEXT(GWBase__Member_Level__c) + &apos;;|;&apos; + TEXT(GWBase__Membership_Origin__c) + &apos;;|;&apos; + Id</formula>
        <inlineHelpText>Concatenated fields used during rollups to locate the most recent opportunity.</inlineHelpText>
        <label>Combined Rollup Fieldset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Commemoration_Name__c</fullName>
        <inlineHelpText>The name of the person being commemorated In Honor Of or In Memory Of with this opportunity</inlineHelpText>
        <label>Commemoration Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Commemoration_Special_Instructions__c</fullName>
        <inlineHelpText>If this opportunity represents a commemoration, this indicates the special instructions associated with honoring or memorializing this person.</inlineHelpText>
        <label>Commemoration Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GWBase__Commemoration_Type__c</fullName>
        <inlineHelpText>If this opportunity represents a commemoration, this indicates the type of commemoration.  In Honor Of a living person or In Memory Of a deceased person. To connect this commemoration to a real contact in Salesforce, create a Contact Role of Honoree</inlineHelpText>
        <label>Commemoration Type</label>
        <picklist>
            <picklistValues>
                <fullName>In Honor Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Memory Of</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary contact for this opportunity. Indicates a hard credit (i.e. the opportunity is attributable to this contact)</description>
        <inlineHelpText>Indicates who this Opportunity is from.  If the Opp is from a person, enter a Contact Name.  If the Opp is from an org or business, enter an Organization Name.  You cannot enter both.</inlineHelpText>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact Name)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GWBase__Deductible_Amount__c</fullName>
        <formula>IF ( 
 OR ( NOT( $RecordType.Name = &quot;Purchase&quot; ), NOT ( $RecordType.Name = &quot;TBD&quot; ) ) ,
  Amount  -  GWBase__Non_Deductible_Amount__c  ,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deductible Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__Donation_Id__c</fullName>
        <label>Donation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Donation_Type__c</fullName>
        <label>Donation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Fund__c</fullName>
        <label>Fund</label>
        <picklist>
            <picklistValues>
                <fullName>General Fund</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Grant_Contract_Date__c</fullName>
        <label>Grant Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__Grant_Number__c</fullName>
        <label>Grant Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Grant_Period_End_Date__c</fullName>
        <label>Grant Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__Grant_Period_Start_Date__c</fullName>
        <label>Grant Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__Grant_Request_Date__c</fullName>
        <label>Grant Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__LOI_Sent_Date__c</fullName>
        <inlineHelpText>date Letter of Intent (or equiv.) was sent</inlineHelpText>
        <label>Grant LOI Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__Matching_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matching Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GWBase__Member_Level__c</fullName>
        <label>Member Level</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Membership_End_Date__c</fullName>
        <inlineHelpText>Date membership period ends.</inlineHelpText>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__Membership_Origin__c</fullName>
        <inlineHelpText>Is this a renewal, a new membership, or a membership with someone who lapsed and has returned.</inlineHelpText>
        <label>Membership Origin</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reacquire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Membership_Start_Date__c</fullName>
        <inlineHelpText>Date when membership period starts</inlineHelpText>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__Next_Payment_Due_Date__c</fullName>
        <inlineHelpText>The date the next installment payment is due.  This field will be blank if not paying in installments.</inlineHelpText>
        <label>Next Installment Due Date</label>
        <summarizedField>GWBase__OppPayment__c.GWBase__Date__c</summarizedField>
        <summaryFilterItems>
            <field>GWBase__OppPayment__c.GWBase__IsInstallment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>GWBase__OppPayment__c.GWBase__Paid__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>GWBase__OppPayment__c.GWBase__Written_Off__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>GWBase__OppPayment__c.GWBase__Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GWBase__Non_Deductible_Amount__c</fullName>
        <inlineHelpText>The portion of the opportunity amount that is not tax-deductible (fee for service or product, etc.)  Leave blank, or set to $0, if the opp is fully deductible.</inlineHelpText>
        <label>Non-Deductible Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__Planned_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planned Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GWBase__Recurring_Payment_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Payment Profile</label>
        <referenceTo>GWBase__Recurring_Payment_Profile__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GWBase__Restriction__c</fullName>
        <label>Restriction</label>
        <picklist>
            <picklistValues>
                <fullName>Unrestricted</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Total_Paid__c</fullName>
        <label>Total Paid</label>
        <summarizedField>GWBase__OppPayment__c.GWBase__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>GWBase__OppPayment__c.GWBase__Paid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>GWBase__OppPayment__c.GWBase__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GWBase__Total_Unpaid__c</fullName>
        <formula>IF ( Amount - GWBase__Total_Paid__c &lt; 0 , 0 , Amount - GWBase__Total_Paid__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Unpaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Move_Id__c</fullName>
        <inlineHelpText>The Id of the last completed move for this Opportunity.</inlineHelpText>
        <label>Last Move Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Move_Subject__c</fullName>
        <inlineHelpText>The Subject of the last completed move for this Opportunity.</inlineHelpText>
        <label>Last Move Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Move_ID__c</fullName>
        <inlineHelpText>The ID of the next Moves Management task for this Opportunity that isn&apos;t completed.</inlineHelpText>
        <label>Next Move ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Move_Subject__c</fullName>
        <inlineHelpText>The Subject of the next Moves Management task for this Opportunity that isn&apos;t completed.</inlineHelpText>
        <label>Next Move Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>GWBase__Gifts_Closed_Lost</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.GWBase__Gift</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </filters>
        <label>Gifts - Closed Lost</label>
    </listViews>
    <listViews>
        <fullName>GWBase__Gifts_Closed_Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.GWBase__Gift</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <label>Gifts - Closed Won</label>
    </listViews>
    <listViews>
        <fullName>GWBase__Gifts_Needing_Thank_Yous</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.GWBase__Gift</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>&quot;Won, Not Thanked&quot;</value>
        </filters>
        <label>Gifts Needing Thank-Yous</label>
    </listViews>
    <listViews>
        <fullName>GWBase__Gifts_Needing_Thanks</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.GWBase__Gift</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>&quot;Won, Not Thanked&quot;</value>
        </filters>
        <label>Gifts - Needing Thanks</label>
    </listViews>
    <listViews>
        <fullName>GWBase__Gifts_Open</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.GWBase__Gift</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Gifts - Open</label>
    </listViews>
    <listViews>
        <fullName>GWBase__Grants_Closed_Lost</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.GWBase__Grant</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </filters>
        <label>Grants - Closed Lost</label>
    </listViews>
    <listViews>
        <fullName>GWBase__Grants_Closed_Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.GWBase__Grant</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <label>Grants - Closed Won</label>
    </listViews>
    <listViews>
        <fullName>GWBase__Grants_Open</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.GWBase__Grant</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Grants - Open</label>
    </listViews>
    <listViews>
        <fullName>GWBase__RecurringGifts</fullName>
        <columns>GWBase__Recurring_Payment_Profile__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GWBase__Recurring_Payment_Profile__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Recurring Gifts</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>GWBase__Gift</fullName>
        <active>true</active>
        <businessProcess>GWBase__Gift</businessProcess>
        <label>Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>GWBase__Grant</fullName>
        <active>true</active>
        <businessProcess>GWBase__Grant</businessProcess>
        <label>Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>GWBase__Membership</fullName>
        <active>true</active>
        <businessProcess>GWBase__Gift</businessProcess>
        <label>Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Major_Donor</fullName>
        <active>true</active>
        <businessProcess>GWBase__Gift</businessProcess>
        <label>Major Donor</label>
    </recordTypes>
    <validationRules>
        <fullName>GWBase__Must_choose_Organization_or_Primary_Con</fullName>
        <active>true</active>
        <description>User must choose to relate this opportunity to an Organization Name or a Primary Contact, which determines the hard credit attribution, both are not allowed.</description>
        <errorConditionFormula>AND( NOT(ISBLANK( AccountId )),NOT(ISBLANK(  GWBase__ContactId__c  )) )</errorConditionFormula>
        <errorMessage>You may only set the Organization Name or the Contact Name to receive the hard credit attribution for this opportunity, but not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GWBase__NonDeductible_Amt_not_more_than_Total</fullName>
        <active>true</active>
        <errorConditionFormula>GWBase__Non_Deductible_Amount__c &gt; Amount</errorConditionFormula>
        <errorMessage>The Non-Deductible Amount cannot be greater than the total Amount of the Opportunity.</errorMessage>
    </validationRules>
</CustomObject>